--- a/package.json
+++ b/package.json
@@ -17,8 +17,13 @@
   },
   "dependencies": {
     "@types/nodemailer": "^6.4.14",
+    "class-validator": "^0.14.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.1",
     "express": "^4.18.2",
-    "nodemailer": "^6.9.9"
+    "mysql2": "^3.9.1",
+    "nodemailer": "^6.9.9",
+    "sequelize": "^6.35.2",
+    "sequelize-cli": "^6.6.2"
   }
 }
